--- a/lib/demo.html
+++ b/lib/demo.html
@@ -1,10 +1,10 @@
 <meta charset="utf-8">
-<title>vcolorpicker demo</title>
-<script src="./vcolorpicker.umd.js"></script>
+<title>fakervue demo</title>
+<script src="./fakervue.umd.js"></script>
 
-<link rel="stylesheet" href="./vcolorpicker.css">
+<link rel="stylesheet" href="./fakervue.css">
 
 
 <script>
-console.log(vcolorpicker)
+console.log(fakervue)
 </script>
